# proc-inspect

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/procinspect/: procinspect.hpp
src/: main.cpp
tests/: test_procinspect.cpp
